--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
                 <li><strong>The collected favorites of those who hack</strong></li>
                 <li><a href="#info">INFO</a> -</li>
                 <li><a href="http://jlord.github.com/sheetsee.js" target="_blank">POWERED BY SHEETSEE.JS</a> -</li>
-                <li><a href="http://www.github.com/jlord/hack-spots" target="_blank">GITHUB</a> -</li>
-                <li><a href="http://www.twitter.com/jllord" target="_blank">@JLLORD</a></li>
+                <li><a href="http://www.github.com/h0ke/hack-spots" target="_blank">GITHUB</a></li>
             </ul>
         </div>
         <div class="container">
